<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <FrameLayout
        android:id="@+id/fram"
        android:layout_width="408dp"
        android:layout_height="107dp"
        android:background="@color/Grren"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-black"
            android:paddingTop="25dp"
            android:text="@string/Football"
            android:textAlignment="center"
            android:textSize="34sp" />
    </FrameLayout>

    <EditText
        android:id="@+id/inputemail"
        android:layout_width="293dp"
        android:layout_height="51dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/hintemail"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/Grren"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fram"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="293dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/Grren"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputemail"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/forgetPassword"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="212dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/connect"
        android:textAlignment="center"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_creatAccoutn" />

    <Button
        android:id="@+id/btn_creatAccoutn"
        android:layout_width="140dp"
        android:layout_height="62dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/plue"
        android:text="@string/creatAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.796"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetPassword" />

    <Button
        android:id="@+id/btn_log"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/Grren"
        android:radius="200dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toStartOf="@+id/btn_creatAccoutn"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetPassword" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnSignin"
        android:layout_width="296dp"
        android:layout_height="59dp"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_log" />

    <ProgressBar
        android:id="@+id/PB1"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignin" />


</androidx.constraintlayout.widget.ConstraintLayout>