<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.secran.matchFragment">

    <FrameLayout
        android:id="@+id/frameLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/match_Day_home_img"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/match_Day_Away_img"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="5dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/match_Day_Away_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:text="@string/away_team"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/match_Day_Away_img" />

            <TextView
                android:id="@+id/Match_Day_home_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/home_team"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/match_Day_home_img" />

            <TextView
                android:id="@+id/match_Day_Date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/match_Day_Away_img"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toEndOf="@+id/match_Day_home_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/match_Day_Time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/match_Day_Away_img"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toEndOf="@+id/match_Day_home_img"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/match_day_view_Date"
                android:layout_width="42dp"
                android:layout_height="2dp"
                android:layout_marginTop="12dp"
                android:background="@color/black"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/match_Day_Date_tv"
                app:layout_constraintStart_toStartOf="@+id/match_Day_Date_tv"
                app:layout_constraintTop_toTopOf="@+id/match_Day_Date_tv" />

            <View
                android:id="@+id/match_day_view_time"
                android:layout_width="42dp"
                android:layout_height="2dp"
                android:background="@color/black"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/match_Day_Time_tv"
                app:layout_constraintEnd_toEndOf="@+id/match_Day_Time_tv"
                app:layout_constraintStart_toStartOf="@+id/match_Day_Time_tv"
                app:layout_constraintTop_toBottomOf="@+id/match_Day_Date_tv" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/match_Day_stadium_img"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="5dp"
                        android:scaleType="fitXY"
                        tools:srcCompat="@drawable/stadium" />

                    <TextView
                        android:id="@+id/match_Day_name_stadium_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/staduam_name"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/capacity"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/match_Day_capacity_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/comment"
                        android:textColor="@color/black" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/match_Day_leag_img"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="5dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/logo_premier_league"
                        android:contentDescription="TODO" />

                    <TextView
                        android:id="@+id/match_Day_name_leag_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/leag_name"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/round"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/match_card_round_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/comment"
                        android:textColor="@color/black" />

                </TableRow>

            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout7">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/match_Day_Home_formation_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="Home Team"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/match_Day_Away_formation_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:text="Away Team"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lineup"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintEnd_toStartOf="@+id/match_Day_Away_formation_tv"
                app:layout_constraintStart_toEndOf="@+id/match_Day_Home_formation_tv"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout8"
        app:layout_constraintVertical_bias="0.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/match_Day_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/match_Day_tv_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="100dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="@+id/scrollView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout8" />

</androidx.constraintlayout.widget.ConstraintLayout>